--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,8 +1,13 @@
 [tool.poetry]
-name = "tt"
-version = "0.1.0"
-description = ""
-authors = ["Joao Vitor Maia <joaocampo2@hotmail.com>"]
+name = "clitt"
+version = "1.1.4"
+description = "Use Twitter from your terminal!"
+authors = ["Joao Vitor Maia <maia.tostring@gmail.com>"]
+repository = "https://github.com/leviosar/clitt"
+documentation = "https://github.com/leviosar/clitt"
+readme = "README.md"
+
+keywords = ["Twitter", "Client", "Command-line"]
 
 [tool.poetry.dependencies]
 python = "^3.7"
@@ -11,6 +16,9 @@ colorama = "^0.4.1"
 
 [tool.poetry.dev-dependencies]
 pytest = "^3.0"
+
+[tool.poetry.scripts]
+clitt = "clitt.__main__:run"
 
 [build-system]
 requires = ["poetry>=0.12"]
