--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "clitt"
-version = "1.1.4"
+version = "1.2.1"
 description = "Use Twitter from your terminal!"
 authors = ["Joao Vitor Maia <maia.tostring@gmail.com>"]
 repository = "https://github.com/leviosar/clitt"
@@ -14,6 +14,7 @@ python = "^3.7"
 tweepy = "^3.8"
 colorama = "^0.4.1"
 click = "^7.0"
+isort = "^4.3.21"
 
 [tool.poetry.dev-dependencies]
 pytest = "^3.0"
