--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,10 +14,11 @@ python = "^3.7"
 tweepy = "^3.8"
 colorama = "^0.4.1"
 click = "^7.0"
-isort = "^4.3.21"
 
 [tool.poetry.dev-dependencies]
+isort = "^4.3.21"
 pytest = "^3.0"
+black = "^19.10b0"
 
 [tool.poetry.scripts]
 clitt = "clitt.__main__:cli"
