--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ click = "^7.0"
 isort = "^4.3.21"
 pytest = "^3.0"
 black = "^19.10b0"
+flake8 = "^3.7.9"
 
 [tool.poetry.scripts]
 clitt = "clitt.__main__:cli"
